# INSULTLE_di_qian

./: Posizioni.py  README.md  TODO.txt  fileVincente.txt  insultleProva  pyproject.toml
insultle/: pyproject.toml
insultle/src/insultle/: __init__.py
src/insultle/: FileClassifica  FileVincite.py  FileVincite.txt  Posizioni.py  SchermataIniziale.py  Vocabolario.txt  __init__.py  fileVincente.txt  funzioni.py  provaFunzionante.py  resources.py  sfondoBIANCO.jfif
